jenkins/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
spec:
  strategy:
    type: Recreate
  progressDeadlineSeconds: 900
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        Environment: Nonprod
        SecurityContext: Internal
        SecurityExposure: Internal
        app: jenkins
    spec:
      affinity:
        nodeAffinity:
          # encourage scheduling on non dynatrace nodes, but don't enforce it.
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: dynatrace
                operator: In
                values:
                - "false"
      
      serviceAccountName: 'jenkins'

      securityContext:
        fsGroup: 1000

      #######################################
      # INIT Container to setup New Plugins.#
      #######################################
      
      containers:
      - name: jenkins
        image: jenkins
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 50000
          name: jnlp        
        livenessProbe:
          httpGet:
            path: /login
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
          timeoutSeconds: 5
          periodSeconds: 60
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /login
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
          periodSeconds: 15
          failureThreshold: 1
        resources:
          requests:
            memory: "$(JENKINS_MEMORY_GI)Gi"
            cpu: "100m"
            ephemeral-storage: "50Mi"
          limits:
            memory: "$(JENKINS_MEMORY_GI)Gi"
            cpu: "2"
        securityContext:
          runAsUser: 1000
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: jenkins-home
        - name: casc-config
          mountPath: /var/jenkins_home/casc_configs
        # - name: jenkins-ad-bind
        #   mountPath: /secret
        - name: init-groovy
          mountPath: /var/jenkins_home/init.groovy.d
        - name: heap-dumps
          mountPath: /dumps
        - name: plugins
          mountPath: /var/jenkins_home/plugins        
      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins
        - name: casc-config
          configMap:
            name: jenkins-casc
        - name: env
          configMap:
            name: jenkins-env
        - name: job-dsls
          configMap:
            name: job-dsls
        - name: init-groovy
          configMap:
            name: init-groovy-scripts
        - name: jenkins-ad-bind
          secret:
            secretName: jenkins-ad-bind
        - name: heap-dumps
          emptyDir: {}
        - name: plugins
          emptyDir: {}
