jenkins/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # ingress.kubernetes.io/rewrite-target: /
    # cert-manager.io/cluster-issuer: letsencrypt
  name: jenkins
spec:
  ingressClassName: nginx
  rules:
    - host: $(JENKINS_NAMESPACE).$(INGRESS_DOMAIN)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
  # tls:
  # - hosts:
  #   - nrsh13-$(JENKINS_NAMESPACE).$(INGRESS_DOMAIN)
  #   secretName: wildcard
